# free-llm-api-keys-python

./: .gitignore  MIGRATION_OLLAMA.md  README.ar.md  README.bn.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.md  README.pt.md  README.ru.md  README.zh.md  pyproject.toml  python_health_report.md
examples/: cleanup.py  demo.py  utils.py
i18n/: README_ar.md  README_bn.md  README_es.md  README_fr.md  README_hi.md  README_id.md  README_pt.md  README_ru.md  README_zh.md
src/free_llm_api_keys/: __init__.py  cache.py  catalog.py  classifier.py  client.py  exceptions.py  fetcher.py  health.py  parser.py
tests/: test_cache.py  test_catalog.py  test_classifier.py  test_health.py  test_parser.py
