[project]
name = "free-llm-api-keys"
version = "0.1.0"
description = "Client Python (format OpenAI) pour les clés IA gratuites de alistaitsacle/free-llm-api-keys, avec cache et auto-rotation des clés."
readme = "README.md"
authors = [
    { name = "Laurent VOLFF", email = "laurentvv@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "openai",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest",
]
